--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/renanvilabela/ProjetoFaculdadeSuape#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "react-native": "^0.73.0",
+    "react-native-maps": "^1.8.3"
   }
 }
