--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/renanvilabela/ProjetoFaculdadeSuape#readme",
   "dependencies": {
+    "axios": "^1.6.2",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
     "react-native": "^0.73.0",
