--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Projeto para a Faculdade usando de exemplo o porto de suape",
   "main": "index.js",
   "scripts": {
+    "start": "expo start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,10 +18,18 @@
   },
   "homepage": "https://github.com/renanvilabela/ProjetoFaculdadeSuape#readme",
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
-    "react-native": "^0.73.0",
-    "react-native-maps": "^1.8.3"
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-maps": "1.7.1",
+    "react-native-web": "~0.19.6"
+  },
+  "devDependencies": {
+    "expo": "^49.0.21"
   }
 }
