--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.0.3",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-image-picker": "^7.1.0",
     "react-native-maps": "1.7.1",
     "react-native-web": "~0.19.6"
   },
